Overhauled for multiplayer version

--- a/Extension/popup.html
+++ b/Extension/popup.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <form>
-    Start <input type="text" id="source" autofocus><br><br>
+    New Game <input type="text" id="source" autofocus><br><br>
+    Join Game <input type="text" id="gameid"><br><br>
     <button id="goBtn">Go</button>   <button id="stopBtn">Stop</button>
 </form>
 </body>
