Added invisible wait queue before game starts

--- a/Extension/popup.html
+++ b/Extension/popup.html
@@ -8,9 +8,11 @@
 </head>
 <body>
 <form>
-    New Game <input type="text" id="source" autofocus><br><br>
-    Join Game <input type="text" id="gameid"><br><br>
-    <button id="goBtn">Go</button>   <button id="stopBtn">Stop</button>
+    Start Page<input type="text" id="source" autofocus><button id="createBtn" style="float:right">Create</button>
+    <button id="goBtn">Go</button><br><br>
+   <div id="join">Game ID <input type="text" id="gameid" style="width:30px;">
+       <button id="joinBtn" style="float:right">Join</button></div><br><br>
+    <button id="stopBtn" style="float:right; width:100%">Quit</button>
 </form>
 </body>
 </html>
