Changed identify by IP by identify by random number

--- a/Extension/popup.html
+++ b/Extension/popup.html
@@ -8,10 +8,15 @@
 </head>
 <body>
 <form>
-    Start Page<input type="text" id="source" autofocus><button id="createBtn" style="float:right">Create</button>
-    <button id="goBtn">Go</button><br><br>
-   <div id="join">Game ID <input type="text" id="gameid" style="width:30px;">
-       <button id="joinBtn" style="float:right">Join</button></div><br><br>
+    Start Page<input type="text" id="source" autofocus>
+    <button id="createBtn" style="float:right">Create</button>
+    <button id="goBtn">Go</button>
+    <br><br>
+
+    <div id="join">Game ID <input type="text" id="gameid" style="width:30px;">
+        <button id="joinBtn" style="float:right">Join</button>
+    </div>
+    <br><br>
     <button id="stopBtn" style="float:right; width:100%">Quit</button>
 </form>
 </body>
