--- a/Extension/popup.html
+++ b/Extension/popup.html
@@ -5,19 +5,72 @@
     <title>Wiki Game</title>
     <script src="popup.js"></script>
     <script src="jquery-2.1.4.js"></script>
+    <style>
+        input {
+            outline: none !important;
+            border: 1px solid #aaa;
+            margin-top: 5px;
+            margin-bottom: 5px;
+            width:98%;
+        }
+        div {
+            outline: none !important;
+            width: 180px;
+            padding:10px 5px 0px 0px;
+            overflow: hidden;
+            border-top: 1px solid #555;
+            margin-top:10px;
+            margin-bottom:10px;
+        }
+        button {
+            -webkit-box-shadow: 0px 2px 3px #666666;
+            -moz-box-shadow: 0px 2px 3px #666666;
+            box-shadow: 0px 2px 3px #666666;
+            outline: none !important;
+            color: #ffffff;
+            background: #00cccc;
+            padding: 5px 10px 5px 10px;
+            text-decoration: none;
+            border: none;
+            text-transform: uppercase;
+            margin: 3px;
+        }
+
+        button:hover {
+            outline: none !important;
+            background-image: -webkit-linear-gradient(top, #00cccc, #00bdbd);
+            background-image: -moz-linear-gradient(top, #00cccc, #00bdbd);
+            background-image: -ms-linear-gradient(top, #00cccc, #00bdbd);
+            background-image: -o-linear-gradient(top, #00cccc, #00bdbd);
+            background-image: linear-gradient(to bottom, #00cccc, #00bdbd);
+            text-decoration: none;
+        }
+        button:active {
+            background-image: -webkit-linear-gradient(top, #00aaaa, #009898);
+            background-image: -moz-linear-gradient(top, #00aaaa, #009898);
+            background-image: -ms-linear-gradient(top, #00aaaa, #009898);
+            background-image: -o-linear-gradient(top, #00aaaa, #009898);
+            background-image: linear-gradient(to bottom, #00aaaa, #009898);
+        }
+    </style>
 </head>
 <body>
-<form>
-    Start Page<input type="text" id="source" autofocus>
-    <button id="createBtn" style="float:right">Create</button>
-    <button id="goBtn">Go</button>
-    <br><br>
-
-    <div id="join">Game ID <input type="text" id="gameid" style="width:30px;">
-        <button id="joinBtn" style="float:right">Join</button>
+<form autocomplete="off">
+    <div id="create" style="display:none;">
+        Start Page<input type="text" id="source" autofocus>
+        <button id="createBtn" style="float:right">Create</button>
     </div>
-    <br><br>
-    <button id="stopBtn" style="float:right; width:100%">Quit</button>
+    <div id="playing" style = "display:none">Game ID: </div>
+    <div id="go" style="display: none;">
+        <button id="goBtn" style="width:100%">Go</button>
+    </div>
+    <div id="join" style="display: none">
+        Game ID <input type="text" id="gameid">
+        <button id="joinBtn" style="float:right;display: inline">Join</button>
+
+    </div>
+
+    <div id="quit"><button id="stopBtn" style="width:100%">Quit</button></div>
 </form>
 </body>
 </html>
